<resources>
    <string name="app_name">优升学家教</string>
    <string name="main_title">首页</string>
    <string name="main_left_drawer_login">登录/注册</string>
    <string name="main_left_drawer_level">我的等级</string>
    <string name="main_left_drawer_orders">我的订单</string>
    <string name="main_left_drawer_pocket">我的钱包</string>
    <string name="main_left_drawer_fe_msg">家教信息维护</string>
    <string name="main_left_drawer_task">任务奖励</string>
    <string name="main_left_drawer_invite">邀请有奖</string>
    <string name="main_left_drawer_special_order">特价推广(发布订单)</string>
    <string name="main_left_drawer_msg_center">消息中心</string>
    <string name="main_left_drawer_contact_us">联系我们</string>
    <string name="main_left_drawer_more">更多</string>
    <string name="main_left_drawer_reward_text">邀请朋友做家教奖励 X 元\n邀请家长最高奖励 X 元, 免收手续费</string>
    <string name="home_multi_book_text">多次预约</string>
    <string name="home_once_book_text">单次预约</string>
    <string name="home_teacher_text">我是家教</string>
    <string name="login_forget_password_hint">如忘记密码，请联系客服电话：020 - 2333333</string>
    <string name="login_login">登录</string>
    <string name="login_parent_register">家长注册</string>
    <string name="login_teacher_register">家教注册</string>
    <string name="login_protocol_hint">点击登录，即表示您已同意《xxxx协议》</string>
    <string name="parent_register_name">您的昵称</string>
    <string name="parent_register_info">请准确填写联系方式，以便家教老师直接联系您。</string>
    <string name="wallet_modify_info">为了您的资金安全，输入后不可修改，如需修改，可联系后台客服人员（微信号：优升学（ysxjj2016）；QQ：2446883640）哟。</string>
    <string name="phone">手  机</string>
    <string name="gender">性  别</string>
    <string name="password">密 码</string>
    <string name="child_gender">宝贝性别</string>
    <string name="child_grade">宝贝年级</string>
    <string name="home_address">家庭地址</string>
    <string name="address">地 址</string>
    <string name="parent_register_submit">提交注册</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="address_info">轻按定位图标一秒后即可拖动图标定位</string>
    <string name="current_position">当前位置</string>
    <string name="sure">确定</string>
    <string name="birthday">出生年月日</string>
    <string name="birthday_example">1990年4月4日</string>
    <string name="id_card_number">身份证号</string>
    <string name="school">学 校</string>
    <string name="grade">年 级</string>
    <string name="profession">专 业</string>
    <string name="school_example">华南理工大学</string>
    <string name="grade_example">2013级</string>
    <string name="profession_example">软件工程</string>
    <string name="had_teach_child_count">已家教过孩子的数量</string>
    <string name="had_teach_time_count">已家教过的时长</string>
    <string name="save_and_next_page">保存并进入下一页</string>
    <string name="teacher_register_step_two_info_register">请完成下列信息，以方便合适您的家长能联系到您\n（下列信息可根据您的意愿随时更改）</string>
    <string name="teacher_register_step_two_info_modify">完善您的信息，有助于合适您的家长能联系到您哦~</string>
    <string name="teacher_register_step_two_info_2">以下参照百度地图公共交通时间\n为您进行匹配每一订单交通补贴</string>
    <string name="teacher_register_step_two_info_3" formatted="false">（建议以家教价格为基础，下调20% ~ 30%）</string>
    <string name="teach_time">授课时间</string>
    <string name="set_your_teach_time">请选择您方便授课的时间</string>
    <string name="min_teach_time">最短课时</string>
    <string name="min_teach_time_example">2 小时 50 分钟</string>
    <string name="accept_traffic_time">能接受的交通时间\n（无交通补贴）</string>
    <string name="traffic_time_example">1 小时 23 分钟</string>
    <string name="max_traffic_time">能接受的最长交通时间\n（超出部分收取交通补贴）</string>
    <string name="traffic_tip">交通补贴</string>
    <string name="can_teach_course">可教授课程及收费</string>
    <string name="teach_course">授课课程</string>
    <string name="teach_time_length">授课时长</string>
    <string name="teach_price">单位价格</string>
    <string name="fill_message">请完善此信息</string>
    <string name="angel_plan">是否参与陪伴天使计划</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="angel_plan_boy_age">天使授课对象最大年龄(男)</string>
    <string name="angel_plane_girl_age">天使授课对象最大年龄(女)</string>
    <string name="angel_plan_price">陪伴天使计划收取价格</string>
    <string name="price_example">1 元/小时</string>
    <string name="age_example">5 岁</string>
    <string name="deny">不接受</string>
    <string name="hint_input">请输入</string>
    <string name="course_info_1">每周固定时间</string>
    <string name="course_info_2">在上述一般时间安排下如需对特殊时间进行调整，请点击以下按钮\n（特殊时间调整适用于单次预约订单）</string>
    <string name="detail_plan_two_months">近两月时间特别安排</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="morning">上午</string>
    <string name="afternoon">下午</string>
    <string name="night">晚上</string>
    <string name="selected_date">选中日期</string>
    <string name="date_example">2016 年 3 月 25 日 （星期五）</string>
    <string name="teach_or_not">是否授课</string>
    <string name="remember_things">备忘录</string>
    <string name="sure_and_save">确认并保存</string>
    <string name="special_time_hint">如家长与您后来协商临时更改了家教地址或定位地址不具体（未明确几栋几户），建议您将新的实际具体地址及相关说明填列在此，以便在特殊情形下方便确认您的位置，保障您的安全。</string>
    <string name="grade_and_price">授课年级与收费</string>
    <string name="self_introduce_info">请对个人做一个真实准确的描述\n以使家长能更多地了解您，并进行家教预约</string>
    <string name="title_activity_receivables_channel">ReceivablesChannelActivity</string>
    <string name="receivables_chanel_info">标 * 项为必填</string>
    <string name="alipay_account">* 支付宝账户</string>
    <string name="receivables_channel_wechat">* 微信账户</string>
    <string name="bank_name">开卡银行</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="photo_upload_info">请上传以下资料证明个人身份\n（标 * 项为必须上传资料）</string>
    <string name="id_card_name">* 身份证照片</string>
    <string name="upload">上 传</string>
    <string name="student_card">* 学生证或校园卡照片</string>
    <string name="avatar">* 免冠证件照或正式照片（家长选择时可视）</string>
    <string name="submit_exam">提交审核</string>
    <string name="order_all">全部</string>
    <string name="order_reservation">已预订</string>
    <string name="order_to_do">待执行</string>
    <string name="order_completed">已完成</string>
    <string name="order_invalid">已失效</string>
    <string name="modify">修改</string>
    <string name="cancel">取消</string>
    <string name="account">账户余额</string>
    <string name="has_withdraw_count">已提现金额</string>
    <string name="withdrawing_count">正在提现金额</string>
    <string name="alipay">支付宝账户</string>
    <string name="wechat">微信</string>
    <string name="wechat_subscription">微信公众号</string>
    <string name="account_bank">开户银行</string>
    <string name="withdraw">提现</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="accept_reservation">是否接受预定</string>
    <string name="teach_grade">授课年级</string>
    <string name="confirm_order">确认订单</string>
    <string name="QQ">QQ</string>
    <string name="email">邮箱</string>
    <string name="contact_way">联系方式</string>
    <string name="problem_and_help">常见问题帮助</string>
    <string name="user_protocol">用户条款</string>
    <string name="about_us">关于我们</string>
    <string name="user_advice">意见反馈</string>
    <string name="to_do_order_warning">  1、每完成一个订单，家长和家教老师均会有积分和任务的奖励，积分可用于会员专属服务哟。\n  2、如任意一方提出不通过平台付款或私下预约，确认后，提出方将无法再免费使用平台服务了哟，另外一方我们将给予200元的诚信奖励金哟。\n  3、如需调课或取消，家长可以在我的订单的订单列表中进行修改或取消。此外，我们赠送的家教老师全天保险将在家教日的前一天购买，为了及时购买保险，请各位家长和家教老师做好上课时间沟通，如需修改上课时间，请于订单日前一天晚21： 00前进行修改或取消，以便平台为家教老师进行保险购买等相关事宜。</string>
    <string name="address_disable_info_parent">亲，为了帮您查找可以上门的名校家教老师，需要您打开地址服务哟^^</string>
    <string name="address_disable_info_teacher">亲，为了帮您匹配您愿意上门的订单，需要您打开地址服务哟^^</string>
    <string name="tutor_info">1、下次辅导方案选择确定后不能再修改，如需要修改，可联系后台客服人员（微信号：优升学（ysxjj2016）；QQ：2446883640）哟。\n2、保证对学生的补习有针对性，建议每次选择1-3个细化知识点。\n3、需先在年级/一级知识点中下拉选择对应的知识点,才可依次选择大章节/二级知识点、小章节/三级知识点。\n4、如不希望知识点过于细化或不确定三级知识点，可选择至二级知识点或一级知识点（但选择范围过大，针对性将不足哟）。\n5、当您选择复习模拟卷时，也可以选择其他年级的模拟卷哟，如学生是高二，但希望补习一些高一的内容，您可以在授课年级中改为高中一年级，我们将为您提供高一的模拟卷咯。\n6、如果您有任何疑问，我们期待您的联系哟~</string>
    <string name="transportation_allowance_explain_text">家教老师会设置Ta一般能去到的最远距离，如果您和Ta的距离超过了这个距离，Ta需要翻山越岭，跋山涉水来找您哈，所以需要支付一些额外的交通补贴安慰下家教老师的身心哈。当然，建议您可以选择其他的离您较近的老师，一般情况下，您附近都有较合适您的老师哟。</string>
    <string name="text_example">（这里要自适应高度~） 我就是江湖上人见人爱、花见花开、车见车载，人称上天入地、无所不能、英俊潇洒、风流倜傥、玉树临风、学富五车、高大威猛、拥有千万‘粉丝’、迷倒万千少女,号称一朵梨花压海棠的玉面小白龙，帅到掉榨! 本人没什么优点 唯一的优点就是没有缺点本人基本全是缺点最大的缺点就是只有优点如果靓仔是一种罪，我已经罪犯滔天;如果有型是一种错，我已经一错再错;如果聪明要受惩罚，我岂不是要千刀万剐;如果谦虚都要受折磨，我又点能逃得过? 本人年方23，英俊潇酒。七岁学文，九岁习武，12岁会泡妞，上知天文地理，下知鸡毛蒜皮，每外出行走，常引美女回头，帅哥跳楼，心地善良，乐于助人。小学时语文课老师讲解“帅哥”含义，我百思不得其解，同桌偷偷递过小镜子。我一照。哦。刹那间明白了。。。据说，我出生时，天空的北方，出现祥云一片，渐渐由远至近，飘到我家房顶后，幻化成一个字：帅！ 大家好，我是华南理工大学2013级软件工程的YLJ。 爱我 你怕了吗？</string>
    <string name="user_protocol_content">1.服务条款的确认和接纳\n
　　本网站及APP的各项内容和服务的所有权归本公司拥有。用户在接受本服务之前，请务必仔细阅读本条款。用户使用服务，或通过完成注册程序，表示用户接受所有服务条款。
\n\n2.用户同意：\n
　　(1) 提供及时、详尽及准确的个人资料。\n
　　(2) 不断更新注册资料、符合及时、详尽、准确的要求。\n
　　如果用户提供的资料不准确，本网站有结束服务的权利。\n
　　用户在本网站和APP的任何行为必须遵循：\n
　　(1) 传输资料时必须符合中国有关法规。\n
　　(2) 使用信息服务不作非法用途和不道德行为。\n
　　(3) 不干扰或混乱网络服务。\n
　　(4) 遵守所有使用服务的网络协议、规定、程序和惯例。用户的行为准则是以因特网法规，政策、程序和惯例为根据的。\n
\n\n3.服务条款的修改\n
　　本网站及APP有权在必要时修改条款，将会在页面公布。\n
　　如果不接受所改动的内容，用户可以主动取消自己的会员资格。如果您不取消自己的会员资格，则视为接受服务条款的变动。\n
　　
\n\n4.用户的帐号和安全性\n
　　一旦成功注册成为会员，您将有用户名，首次登陆时需要使用手机验证码登陆。\n
　　用户将对用户名和手机验证码的安全负全部责任。另外，每个用户都要对以其用户名进行的所有活动和事件负全责。为了保障用户的资金安全，用户的支付宝微信钱包账户确定后将不能修改（以免发生被盗用修改钱包账户的情况），除非联系我们，后台确认身份以后可再进行修改。\n
　　用户若发现任何非法使用用户帐号或存在安全漏洞的情况，请立即通告我们。\n
\n\n5.拒绝提供担保\n
　　用户明确同意使用本公司服务，由用户个人承担风险。\n
　　本网站及APP不担保服务一定满足用户的要求，也不担保服务不会中断，对服务的及时性、安全性、出错发生都不作担保。\n
　　用户理解并接受：任何通过服务取得的信息资料的可靠性有用性取决于用户自己的判断，用户自己承担所有风险和责任。\n
\n\n6.有限责任\n
　　本网站及APP对任何由于使用服务引发的直接、间接、偶然及继起的损害不负责任。\n
　　这些损害可能来自（包括但不限于）：不正当使用服务，或传送的信息不符合规定等。\n
\n\n7.对用户信息的存储和限制\n
　　本网站及APP不对用户发布信息的删除或储存失败负责，本公司有判定用户的行为是否符合服务条款的要求和精神的保留权利。如果用户违背了服务条款的规定，有中断对其提供服务的权利。\n
\n\n8.结束服务\n
　　本网站及APP可随时根据实际情况中断一项或多项服务，不需对任何个人或第三方负责或知会。\n
　　同时用户若反对任何服务条款的建议或对后来的条款修改有异议，或对服务不满，用户可以行使如下权利：\n
　　(1) 不再使用本公司的服务。\n
　　(2) 通知本公司停止对该用户的服务。\n
\n\n9.信息内容的所有权\n
　　本公司的信息内容包括：文字、软件、声音、相片、录象、图表；以及其它信息，所有这些内容受版权、商标、标签和其它财产所有权法律的保护。\n
　　用户只能在授权下才能使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派生产品。\n
\n\n10.隐私保护条款\n
　　本网站及APP将严格保守用户的个人隐私，承诺未经过您的同意不将您的个人信息任意披露。\n
　　但在以下情形下，我们将无法再提供您前述保证而披露您的相关信息。这些情形包括但不限于：\n
　　* 显示家长和家教为了预约和匹配，使用专业辅导服务等平台服务所必须的信息。\n
　　* 为了给家教老师购买保险，我们不得不把您的某些信息，如您的姓名、联系电话等提供给平安保险公司，以便购买保险。\n
　　* 当您在本网站的行为违反的服务条款，或可能损害他人权益或导致他人遭受损害，只要我们相信披露您的个人资料是为了辨识、联络或采取法律行动所必要的行动时。\n
　　* 法律法规所规定的必须披露或公开的个人信息。\n
　　* 当司法机关或其它有权机关依法执行公务，要求提供特定个人资料时，我们必须给予必要的配合。\n
\n\n11.适用法律\n
　　上述条款将适用中华人民共和国的法律，所有的争端将诉诸于本网所在地的人民法院。\n
　　如发生服务条款与中华人民共和国法律相抵触时，则这些条款将完全按法律规定重新解释，而其它条款则依旧保持约束力。\n
</string>
    <string name="about_insurance">我们与平安保险进行合作，为每位家教老师提供外出家教当天24小时的人身意外保险，保额最高可达10万元人民币，保障每位家教老师的出行安全。\na、本产品由平安养老保险股份有限公司承保，目前该公司在北京市、上海市、天津市、重庆市、安徽省、福建省、甘肃省、广东省、广西壮族自治区、贵州省、海南省、河北省、河南省、黑龙江省、湖北省、湖南省、吉林省、江苏省、江西省、辽宁省、内蒙古自治区、宁夏回族自治区、青海省、山东省、山西省、陕西省、四川省、新疆维吾尔自治区、云南省、浙江省设有分支机构。本产品的销售区域为全国，我方从慧择保险网购买，后续理赔等相关事务均可由慧择保险网协助办理。\nb、本产品承保年龄为0岁—80周岁(含0岁、80周岁)，未成年人累计意外身故保额以保监会规定为准（航空意外除外）。\nc、本产品的生存受益人限为被保险人本人；身故保险金受益人仅为被保险人的法定继承人，不受理其他指定或变更。\nd、本产品不承保从事高风险运动，包括但不限于潜水、跳伞、攀岩、探险、蹦极、驾驶滑翔机、武术比赛、摔跤、特技表演、赛马、赛车等。可承保休闲旅游、业余跑步、远足徒步、登山运动、定向运动、拓展活动、场地趣味活动、自行车运动、山地自行车越野、场地/越野轮滑、自驾车旅行、游泳等低风险运动。\ne、本产品仅提供电子保单，电子保单一经生成不办理任何形式的变更、注销、退保。\nf、如有其它疑问，可请致电慧择保险网客服热线：4006-366-366。
</string>
    <string name="about_us_content">优升学家教是为广大家长提供一对一大学生家教免费预约和个性化服务的教育培训平台，致力于让家长找到更适合的大学生家教老师，并根据每位学生的学习情况和需求提供专业的辅导服务，为学生提供一对一的系统性学习辅导，帮助学生对重要知识点掌握，对薄弱知识的加强，以达到掌握学习方法、提升学生成绩的目的。</string>
    <string name="tutor_order_explain_content">我们为初高中孩子准备了个性化的专业辅导方案，您可于下订单时勾选“专业辅导”哟。该辅导将提供与学生知识水平、薄弱知识点相切合的个性化专属考卷辅导和持续性、系统性、针对性的跟进服务，帮助于实实在在提高孩子的成绩。</string>
    <string name="tutor_reserve_explain_content">该辅导将提供与学生知识水平、薄弱知识点相切合的个性化专属考卷辅导和持续性、系统性、针对性的跟进服务，帮助于实实在在提高孩子的成绩。（暂时只开通初高中的专业辅导服务哟^^）</string>
    <string name="callback_content">反馈内容:</string>
    <string name="more_problems">更多问题</string>
    <string name="login_info">如您已有账号，请先登录</string>
</resources>