<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@color/theme_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onAvatarClick"
        android:paddingTop="38dp">

        <com.scut.easyfe.ui.customView.CircleImageView
            android:id="@+id/civ_avatar"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/default_avatar" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/civ_avatar"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/layout_padding_small"
            android:text="@string/main_left_drawer_login"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:id="@+id/iv_arrow_right"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/layout_padding_small"
            android:layout_marginTop="15dp"
            android:src="@mipmap/right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_divider_height"
        android:layout_marginRight="@dimen/layout_margin_small"
        android:background="@color/left_drawer_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/main_left_drawer_item"
            android:text="@string/main_left_drawer_level" />
    </LinearLayout>

    <View style="@style/main_left_drawer_divider" />

    <TextView
        style="@style/main_left_drawer_item"
        android:onClick="onMyOrderClick"
        android:text="@string/main_left_drawer_orders" />

    <View style="@style/main_left_drawer_divider" />

    <TextView
        style="@style/main_left_drawer_item"
        android:onClick="onPocketClick"
        android:text="@string/main_left_drawer_pocket" />

    <View style="@style/main_left_drawer_divider" />

    <TextView
        style="@style/main_left_drawer_item"
        android:text="@string/main_left_drawer_fe_msg"
        android:onClick="onTeacherMsgManageClick"/>

    <View style="@style/main_left_drawer_divider" />

    <TextView
        style="@style/main_left_drawer_item"
        android:text="@string/main_left_drawer_task" />

    <View style="@style/main_left_drawer_divider" />

    <TextView
        style="@style/main_left_drawer_item"
        android:text="@string/main_left_drawer_invite" />

    <View style="@style/main_left_drawer_divider" />

    <TextView
        style="@style/main_left_drawer_item"
        android:onClick="onSpreadClick"
        android:text="@string/main_left_drawer_special_order" />

    <View style="@style/main_left_drawer_divider" />

    <TextView
        style="@style/main_left_drawer_item"
        android:text="@string/main_left_drawer_msg_center" />

    <View style="@style/main_left_drawer_divider" />

    <TextView
        style="@style/main_left_drawer_item"
        android:text="@string/main_left_drawer_contact_us" />

    <View style="@style/main_left_drawer_divider" />

    <TextView
        style="@style/main_left_drawer_item"
        android:text="@string/main_left_drawer_more" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_small"
        android:layout_marginRight="@dimen/layout_margin_small"
        android:layout_marginTop="@dimen/layout_margin_normal"
        android:padding="@dimen/layout_padding_small"
        android:background="@color/theme_color_dark"
        android:textColor="@color/title_text_color"
        android:textSize="@dimen/text_size_small"
        android:text="@string/main_left_drawer_reward_text"/>


</LinearLayout>