<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scut.easyfe.ui.activity.TeacherRegisterTwoActivity">

    <include
        android:id="@+id/teacher_register_step_two_titlebar"
        layout="@layout/titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_app_bg"
        android:layout_below="@+id/teacher_register_step_two_titlebar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/layout_padding_small"
                android:text="@string/teacher_register_step_two_info_1"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/text_size_tiny" />

            <LinearLayout style="@style/ll_container_normal_style">

                <TextView
                    style="@style/text_normal_style"
                    android:layout_marginRight="@dimen/container_stoke_width"
                    android:layout_weight="1"
                    android:text="@string/teach_time" />

                <TextView
                    android:id="@+id/teacher_register_two_tv_teach_time"
                    style="@style/text_normal_style"
                    android:layout_weight="3"
                    android:drawableRight="@mipmap/icon_right_arrow_padding"
                    android:gravity="start|center_vertical"
                    android:onClick="onTeachTimeClick"
                    android:text="@string/set_your_teach_time"
                     />
            </LinearLayout>

            <LinearLayout style="@style/ll_container_normal_style">

                <TextView
                    style="@style/text_normal_style"
                    android:layout_marginRight="@dimen/container_stoke_width"
                    android:layout_weight="1"
                    android:text="@string/min_teach_time" />

                <TextView
                    android:id="@+id/teacher_register_two_tv_min_teach_time"
                    style="@style/text_normal_style"
                    android:layout_weight="3"
                    android:drawableRight="@mipmap/icon_right_arrow_padding"
                    android:gravity="start|center_vertical"
                    android:onClick="onMinTeachTimeClick"
                    tools:text="@string/min_teach_time_example"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/layout_padding_small"
                android:text="@string/teacher_register_step_two_info_2"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/text_size_tiny" />

            <LinearLayout
                style="@style/ll_container_normal_style"
                android:layout_height="50dp">

                <TextView
                    style="@style/text_normal_style"
                    android:layout_marginRight="@dimen/container_stoke_width"
                    android:layout_weight="3"
                    android:text="@string/accept_traffic_time" />

                <TextView
                    android:id="@+id/teacher_register_two_tv_traffic_time"
                    style="@style/text_normal_style"
                    android:layout_weight="4"
                    android:drawableRight="@mipmap/icon_right_arrow_padding"
                    android:gravity="start|center_vertical"
                    android:onClick="onTrafficTimeClick"
                    tools:text="@string/traffic_time_example" />
            </LinearLayout>
            <LinearLayout
                style="@style/ll_container_normal_style"
                android:layout_height="50dp">
                <TextView
                    style="@style/text_normal_style"
                    android:layout_marginRight="@dimen/container_stoke_width"
                    android:layout_weight="3"
                    android:text="@string/max_traffic_time" />

                <TextView
                    android:id="@+id/teacher_register_two_tv_max_traffic_time"
                    style="@style/text_normal_style"
                    android:layout_weight="4"
                    android:drawableRight="@mipmap/icon_right_arrow_padding"
                    android:gravity="start|center_vertical"
                    android:onClick="onMaxTrafficTimeClick"
                    tools:text="@string/traffic_time_example" />
            </LinearLayout>
            <LinearLayout style="@style/ll_container_normal_style">

                <TextView
                    style="@style/text_normal_style"
                    android:layout_marginRight="@dimen/container_stoke_width"
                    android:layout_weight="1"
                    android:text="@string/traffic_tip" />

                <TextView
                    android:id="@+id/teacher_register_two_tv_tip"
                    style="@style/text_normal_style"
                    android:layout_weight="3"
                    android:drawableRight="@mipmap/icon_right_arrow_padding"
                    android:gravity="start|center_vertical"
                    android:onClick="onTipClick"
                    tools:text="5 元" />
            </LinearLayout>

            <LinearLayout style="@style/ll_container_normal_style"
                android:layout_marginTop="@dimen/layout_margin_small"
                android:layout_marginBottom="@dimen/layout_margin_small">

                <TextView
                    style="@style/text_normal_style"
                    android:layout_marginRight="@dimen/container_stoke_width"
                    android:layout_weight="2"
                    android:text="@string/teach_course" />

                <TextView
                    android:id="@+id/teacher_register_two_tv_course"
                    style="@style/text_normal_style"
                    android:layout_weight="3"
                    android:drawableRight="@mipmap/icon_right_arrow_padding"
                    android:gravity="start|center_vertical"
                    android:onClick="onTeachCourseClick"
                    android:text="@string/fill_message"
                    />
            </LinearLayout>

            <LinearLayout style="@style/ll_container_normal_style"
                >

                <TextView
                    style="@style/text_normal_style"
                    android:layout_marginRight="@dimen/container_stoke_width"
                    android:layout_weight="1"
                    android:onClick="onAngleDetailClick"
                    android:drawableRight="@mipmap/icon_detail_question_padding"
                    android:text="@string/angel_plan" />

                <TextView
                    android:id="@+id/teacher_register_two_tv_angel"
                    style="@style/text_normal_style"
                    android:layout_weight="1"
                    android:drawableRight="@mipmap/icon_right_arrow_padding"
                    android:gravity="start|center_vertical"
                    android:onClick="onAnglePlaneClick"
                    android:text="@string/no"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/teacher_register_two_ll_angel_boy_age"
                style="@style/ll_container_normal_style"
                android:visibility="gone"
                tools:visibility="visible"
                >

                <TextView
                    style="@style/text_normal_style"
                    android:layout_marginRight="@dimen/container_stoke_width"
                    android:layout_weight="1"
                    android:text="@string/angel_plan_boy_age" />

                <TextView
                    android:id="@+id/teacher_register_two_tv_angel_boy_age"
                    style="@style/text_normal_style"
                    android:layout_weight="1"
                    android:drawableRight="@mipmap/icon_right_arrow_padding"
                    android:gravity="start|center_vertical"
                    android:onClick="onMaleAgeClick"
                    android:text="@string/deny"
                     />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/teacher_register_two_ll_angel_girl_age"
                style="@style/ll_container_normal_style"
                android:visibility="gone"
                tools:visibility="visible"
                >

                <TextView
                    style="@style/text_normal_style"
                    android:layout_marginRight="@dimen/container_stoke_width"
                    android:layout_weight="1"
                    android:text="@string/angel_plane_girl_age" />

                <TextView
                    android:id="@+id/teacher_register_two_tv_angel_girl_age"
                    style="@style/text_normal_style"
                    android:layout_weight="1"
                    android:drawableRight="@mipmap/icon_right_arrow_padding"
                    android:gravity="start|center_vertical"
                    android:onClick="onFemaleAgeClick"
                    android:text="@string/deny"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/teacher_register_two_ll_angel_price"
                style="@style/ll_container_normal_style"
                android:visibility="gone"
                tools:visibility="visible"
                >

                <TextView
                    style="@style/text_normal_style"
                    android:layout_marginRight="@dimen/container_stoke_width"
                    android:layout_weight="1"
                    android:text="@string/angel_plan_price" />

                <TextView
                    android:id="@+id/teacher_register_two_tv_angel_price"
                    style="@style/text_normal_style"
                    android:layout_weight="1"
                    android:drawableRight="@mipmap/icon_right_arrow_padding"
                    android:gravity="start|center_vertical"
                    android:onClick="onAnglePriceClick"
                    android:text="@string/price_example"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/layout_padding_small"
                android:text="@string/teacher_register_step_two_info_3"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/text_size_tiny" />
            <TextView
                android:id="@+id/teacher_register_two_tv_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_small"
                android:layout_marginEnd="@dimen/layout_margin_small"
                android:layout_marginStart="@dimen/layout_margin_small"
                android:layout_marginTop="@dimen/layout_margin_small"
                android:background="@drawable/selector_main_left_drawer_item"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onRegisterTwoClick"
                android:padding="@dimen/layout_padding_small"
                android:text="@string/save_and_next_page"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
